[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "1.0.2"
edition = "2024"
rust-version = "1.92"
publish = false

[workspace.dependencies]
# Internal
conduit-op-reth-node = { path = "crates/node" }

# Reth (paradigmxyz/reth @ v1.11.4)
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }

# op-reth (moved to ethereum-optimism/optimism repo at v1.11.0)
reth-optimism-cli = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5", default-features = false }
reth-optimism-node = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }
reth-optimism-chainspec = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5", default-features = false }
reth-optimism-consensus = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5", default-features = false }
reth-optimism-evm = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5", default-features = false }
reth-optimism-payload-builder = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }
reth-optimism-primitives = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5", default-features = false }
reth-optimism-forks = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5", default-features = false }
reth-optimism-rpc = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5", features = ["client"] }

# Alloy
alloy-primitives = "1.5.6"
alloy-genesis = "1.8.2"
alloy-consensus = "1.8.2"
alloy-evm = "0.27.2"
alloy-op-evm = "0.26.3"
alloy-eips = "1.8.2"
alloy-sol-macro = "1.5.6"
alloy-sol-types = "1.5.6"
alloy-rpc-types-eth = "1.8.2"
op-alloy-consensus = "0.23"
op-alloy-rpc-types = "0.23"
op-alloy-rpc-types-engine = "0.23"
op-alloy-network = "0.23"

# Revm
revm = "34"
op-revm = "15"

# Test infrastructure
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.13.2", default-features = false, features = ["query"] }
reth-optimism-flashblocks = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }

alloy-rpc-types-engine = "1.8.2"
alloy-signer-local = "1.8.2"
alloy-network = "1.8.2"

# Other
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tempfile = "3"

# Unify op-alloy/alloy-op crates so crates.io transitive deps resolve to the same
# git versions used by the ethereum-optimism/optimism repo.
[patch.crates-io]
op-alloy-consensus = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }
op-alloy-rpc-types = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }
op-alloy-rpc-types-engine = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }
op-alloy-rpc-jsonrpsee = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }
op-alloy-network = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }
alloy-op-evm = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }
alloy-op-hardforks = { git = "https://github.com/ethereum-optimism/optimism", tag = "op-reth/v1.11.5" }

# Redirect paradigmxyz/reth crates (pulled in by op-reth/v1.11.5) to the
# Chaintable/conduit-reth fork containing the get_deposit_nonce / get_l1_fee
# trait defaults and debank trace RPC extensions.
[patch."https://github.com/paradigmxyz/reth"]
reth-basic-payload-builder = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-chain-state = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-chainspec = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-cli = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-cli-commands = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-cli-runner = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-cli-util = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-codecs = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-consensus = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-consensus-common = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-db = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-db-api = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-db-common = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-downloaders = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-engine-local = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-engine-primitives = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-errors = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-eth-wire = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-eth-wire-types = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-ethereum-cli = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-ethereum-consensus = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-ethereum-forks = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-ethereum-primitives = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-evm = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-evm-ethereum = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-execution-errors = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-execution-types = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-exex = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-fs-util = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-metrics = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-network = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-network-api = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-network-peers = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-node-api = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-node-builder = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-node-core = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-node-ethereum = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-node-events = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-node-metrics = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-payload-builder = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-payload-builder-primitives = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-payload-primitives = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-payload-util = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-payload-validator = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-primitives = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-primitives-traits = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-provider = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-prune = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-prune-types = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-revm = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-rpc = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-rpc-api = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-rpc-builder = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-rpc-convert = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-rpc-engine-api = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-rpc-eth-api = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-rpc-eth-types = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-rpc-layer = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-rpc-server-types = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-stages = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-stages-types = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-static-file = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-static-file-types = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-storage-api = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-storage-errors = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-tasks = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-tracing = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-transaction-pool = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-trie = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-trie-common = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-trie-db = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }
reth-zstd-compressors = { git = "https://github.com/Chaintable/conduit-reth.git", rev = "b326dc22" }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
